# sgame

./: README.md
config/server/: dbconfig.xml  routerconfig.xml  server.xml
datatable/: config.xml  start.bat
datatable/excel/: 例子.xlsx
datatable/json/: table_name.txt
datatable/xml/: table_name.xml
script/: kill_all.sh  run_all.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt  http_client.cpp  http_client.h  http_server.cpp  http_server.h  logging.cpp  logging.h  md5.h  randomex.cpp  randomex.h  redis_client_wrapper.cpp  redis_client_wrapper.h  sha1.cpp  singleton.h  stringex.cpp  stringex.h  struct_def.cpp  struct_def.h  tcp_server.cpp  tcp_server.h  timeex.cpp  timeex.h  timer.cpp  timer.h  websocket_sever.cpp  websocket_sever.h  zmqex_connect_wrapper.cpp  zmqex_connect_wrapper.h  zmqex_poll_wrapper.cpp  zmqex_poll_wrapper.h  zmqex_unit.cpp  zmqex_unit.h  zmqex_wrapper.cpp  zmqex_wrapper.h
src/config/: CMakeLists.txt  dbconfig.cpp  dbconfig.h  loadxml.cpp  loadxml.h  logconfig.h  router_config.cpp  router_config.h  server_config.cpp  server_config.h  srvconfig.h
src/gamesrv/: CMakeLists.txt  game_cmd_handle.cpp  game_cmd_handle.h  game_server.cpp  game_server.h  main.cpp
src/gatesrv/: CMakeLists.txt  gate_server.cpp  gate_server.h  main.cpp
src/gmsrv/: CMakeLists.txt  gm_cmd_handle.cpp  gm_cmd_handle.h  gm_server.cpp  gm_server.h  main.cpp
src/logicsrv/: CMakeLists.txt  logic_cmd_handle.cpp  logic_cmd_handle.h  logic_server.cpp  logic_server.h  main.cpp
src/protocol/: CMakeLists.txt  cmd_handle.cpp  cmd_handle.h  game_base.proto  game_base_struct_def.cpp  game_base_struct_def.h  gm_msg.proto  msg_assist.cpp  msg_assist.h  msg_cmd.proto  msg_info.proto  router_send_assist.cpp  router_send_assist.h
src/routersrv/: CMakeLists.txt  main.cpp  router_server.cpp  router_server.h
